--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\psing\OneDrive\Desktop\circle-cropped-2.png" alt="Satyansh's profile picture"></td>
+      <td><img src="E:\Web Development\HTML-Pesonal Site\circle-cropped-2.png" alt="Satyansh's profile picture"></td>
       <td>
         <h1>Satyansh Gill</h1>
         <p><em>Future Vocalist at <strong><a href="https://www.bollywood.com/">Bollywood Industry</a></strong>.</em></p>
